--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "file-loader": "^6.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "3.4.1",
-    "react-typist": "^2.0.5"
+    "react-typist": "^2.0.5",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
