--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "file-loader": "^6.0.0",
     "global": "^4.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-editor-js": "^1.5.0",
     "react-redux": "^7.2.0",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-typist": "^2.0.5",
     "redux": "^4.0.5"
@@ -39,5 +42,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@editorjs/checklist": "^1.1.0",
+    "@editorjs/code": "^2.4.1",
+    "@editorjs/delimiter": "^1.1.0",
+    "@editorjs/editorjs": "^2.17.0",
+    "@editorjs/embed": "^2.3.1",
+    "@editorjs/header": "^2.4.1",
+    "@editorjs/image": "^2.3.4",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.1.3",
+    "@editorjs/list": "^1.4.0",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.6.1",
+    "@editorjs/quote": "^2.3.0",
+    "@editorjs/table": "^1.2.2",
+    "@editorjs/warning": "^1.1.1"
   }
 }
